--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+          pip install isort
           # Alternatively if your dev dependencies are in requirements-dev.txt
           # pip install -r requirements-dev.txt
       
@@ -40,7 +41,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov isort
       
       - name: Run tests
         run: |
